--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -29,6 +29,7 @@
       <a class="Btn" name="sides" href="{% url 'sortmenu' "side" %}">Sides</a>
       <a class="Btn" name="salads" href="{% url 'sortmenu' "salad" %}">Salads</a>
       <a class="Btn" name="starters" href="{% url 'sortmenu' "starter" %}">Starters</a>
+      <a class="Btn" name="sandwiches" href="{% url 'sortmenu' "sandwich" %}">Sandwiches</a>
     </div>
     <div class="mainpage">
       <div id="content">
