small update to broken sides form/model

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -24,12 +24,7 @@
           <button>add in the dropdown</button><button>add in the dropdown</button>
           {% endif %}
           {% if item.type == "small"%}
-          <form method="POST" action="">
-            {%csrf_token%}
-              <p>{{form.option}}</p>
-              <input class="inp" type="submit" value="Add Side">
-            </div>
-          </form>
+          <button>add in the dropdown</button>
           {% endif %}
           <h2 class="itemPrice">{{item.cost}}</h2>
           <button>
