--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -34,12 +34,11 @@
     <div class="mainpage">
       <div id="content">
         {% for item in menu %}
-          <div id="itemBox" class="{{item.type}}">
+          <div id="itemBox" class="{{item.type}}"><a  href="{% url 'item' item.name %}">
             <h2 class="itemName">{{item.name}}</h2>
             <p class="itemDesc">{{item.description}}</p>
             <h2 class="itemPrice">$ {{item.cost}}</h2>
-            <button>
-              <a href="{% url 'addToCart' item.name %}">Add to Cart</a></button>
+            <button></a>
           </div>
         {% endfor %}
       </div>
