more headway into getting side dropdown to work.  Back and forth on the best approack

--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -22,9 +22,7 @@
     </nav>
     <div class="dropdown-content" id="myDropdown">
       <a class="Btn" name="all" href="{% url 'food' %}">Full Menu</a>
-      <a class="Btn" name="small" href="{% url 'sortmenu' "small" %}"
-        >Burgers and More</a
-      >
+      <a class="Btn" name="small" href="{% url 'sortmenu' "small" %}">Burgers and More</a>
       <a class="Btn" name="big" href="{% url 'sortmenu' "big" %}">Plates</a>
       <a class="Btn" name="sides" href="{% url 'sortmenu' "side" %}">Sides</a>
       <a class="Btn" name="salads" href="{% url 'sortmenu' "salad" %}">Salads</a>
