--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -25,16 +25,10 @@
           <p class="itemDesc">{{item.description}}</p>
           <h2 class="itemPrice">$ {{item.cost}}</h2>
           {% if item.type == "small" %}
-          <form action="" method="POST">
-            {%csrf_token%}{{newSide.option}}
-            <input type="submit" name="form_type" value="Add to Cart" />
-          </form>
+          <p>Hello World</p>
           {% elif item.type == "big"%}
-          <form action="" method="POST">{% csrf_token %} {{newSide.option}}</form>
-          <form action="" method="POST">
-            {% csrf_token %} {{newSide.option}}
-            <input type="submit" name="form_type" value="Add to Cart" />
-          </form>
+          <p>Hello World</p>
+          <p>Hello World</p>
           {% else %}
           <a href="{% url 'addToCart' item.name %}">Add to Cart</a>
           {% endif %}
@@ -44,4 +38,3 @@
     <script src="{% static 'script.js' %}"></script>
   </body>
 </html>
-
