--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -24,11 +24,14 @@
           <h2 class="itemName">{{item.name}}</h2>
           <p class="itemDesc">{{item.description}}</p>
           <h2 class="itemPrice">$ {{item.cost}}</h2>
-          {% if item.type == "small" %}
-          <p>Hello World</p>
+          <form action="" method="POST">
+            {% if item.type == "small" %}
+              {% csrf_token %} {{smallFood.as_p}}
+              <input type="submit" name="form_type" value="big" />
+          </form>
           {% elif item.type == "big"%}
-          <p>Hello World</p>
-          <p>Hello World</p>
+            {% csrf_token %} {{bigFood.as_p}}
+            <input type="submit" name="form_type" value="small" />
           {% else %}
           <a href="{% url 'addToCart' item.name %}">Add to Cart</a>
           {% endif %}
