--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -27,11 +27,13 @@
           <form action="" method="POST">
             {% if item.type == "small" %}
               {% csrf_token %} {{smallFood.as_p}}
+              <input type="submit" name="form_type" value="small" />
+          </form>
+          <form action="" method="POST">
+            {% elif item.type == "big"%}
+              {% csrf_token %} {{bigFood.as_p}}
               <input type="submit" name="form_type" value="big" />
           </form>
-          {% elif item.type == "big"%}
-            {% csrf_token %} {{bigFood.as_p}}
-            <input type="submit" name="form_type" value="small" />
           {% else %}
           <a href="{% url 'addToCart' item.name %}">Add to Cart</a>
           {% endif %}
