trying to fix the manual turn off orders button

--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -41,6 +41,30 @@
         {% endfor %}
       </div>
     </div>
-    <script src="{% static 'script.js' %}"></script>
+    <script>
+      const foodbox = document.getElementById("content");
+      const ticketDisplay = document.getElementById("ticketDisplay");
+      const options = document.querySelectorAll(".Btn");
+      let total = 0;
+      const totalText = document.getElementById("total");
+      var dt = new Date();
+      const sidesNames = [];
+      
+      function checkDateTime() {
+        if (dt.getDay() != 5 && dt.getDay() != 6) {
+          document.getElementById("myDropdown").insertAdjacentHTML(
+            "beforeend",
+            `
+              <a class="Btn" name="seafood" href="{% url 'sortmenu' "seafood" %}">Seafood</a>
+            `
+          );
+        }
+      }
+      
+      //toggle menu
+      function myFunction() {
+        document.getElementById("myDropdown").classList.toggle("show");
+      }
+    </script>
   </body>
 </html>
