--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -15,62 +15,75 @@
     <nav class="sticky">
       <a href="{% url 'home' %}" title="Home">Home</a>
     </nav>
-    <div class="afterHoursError">
-      We do not take online orders after 7 PM. Sorry for the inconvenience.
-    </div>
     <div id="checkoutBox">
-      <h1 id="totalBox"></h1>
+      <h1 id="totalBox">${{total}}</h1>
       <h1>Your order will be ready in about 45 minutes!</h1>
       <div id="paypal-button-container"></div>
       <!-- Include the PayPal JavaScript SDK -->
       <script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD"></script>
     </div>
     <script>
-      paypal
-        .Buttons({
-          // Set up the transaction
-          createOrder: function (data, actions) {
-            return actions.order.create({
-              purchase_units: [
-                {
-                  amount: {
-                    value: document
-                      .getElementById("total")
-                      .innerHTML.substring(1),
-                  },
-                },
-              ],
-            });
-          },
+        const total = document.getElementById("totalBox").innerHTML;
 
-          // Finalize the transaction
-          onApprove: function (data, actions) {
-            return actions.order.capture().then(function (orderData) {
-              // Successful capture! For demo purposes:
-              console.log(
-                "Capture result",
-                orderData,
-                JSON.stringify(orderData, null, 2)
-              );
-              var transaction =
-                orderData.purchase_units[0].payments.captures[0];
-              alert(
-                "Transaction " +
-                  transaction.status +
-                  ": " +
-                  transaction.id +
-                  "\n\nSee console for all available details"
-              );
-
-              // Replace the above to show a success message within this page, e.g.
-              // const element = document.getElementById('paypal-button-container');
-              // element.innerHTML = '';
-              // element.innerHTML = '<h3>Thank you for your payment!</h3>';
-              // Or go to another URL:  actions.redirect('thank_you.html');
-            });
-          },
-        })
-        .render("#paypal-button-container");
+        function getCookie(name) {
+           var cookieValue = null;
+           if (document.cookie && document.cookie !== '') {
+               var cookies = document.cookie.split(';');
+               for (var i = 0; i < cookies.length; i++) {
+                   var cookie = cookies[i].trim();
+                   // Does this cookie string begin with the name we want?
+                   if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                       cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                       break;
+                   }
+               }
+           }
+           return cookieValue;
+       }
+       var csrftoken = getCookie('csrftoken');
+   
+        var cartid = '{{cartid}}'
+   
+        function completeOrder(){
+          var url = "{% url 'complete' %}"
+          console.log("ya ma")
+   
+          fetch(url, {
+            method:'POST',
+            headers:{
+              'Content-type':'application/json',
+              'X-CSRFToken':csrftoken,
+            },
+            body:JSON.stringify({'cartid':cartid})
+          })
+        }
+   
+   
+           // Render the PayPal button into #paypal-button-container
+           paypal.Buttons({
+   
+               // Set up the transaction
+               createOrder: function(data, actions) {
+                   return actions.order.create({
+                       purchase_units: [{ 
+                           amount: {
+                               value: {{total}}
+                           }
+                       }]
+                   });
+               },
+   
+               // Finalize the transaction
+               onApprove: function(data, actions) {
+                   return actions.order.capture().then(function(details) {
+                       // Show a success message to the buyer
+                       completeOrder()
+                       alert('Transaction completed by ' + details.payer.name.given_name + '!');
+                   });
+               }
+   
+   
+           }).render('#paypal-button-container')
     </script>
   </body>
 </html>
