--- a/app/static/admin.css
+++ b/app/static/admin.css
@@ -8,10 +8,23 @@ body {
 }
 nav {
   overflow: hidden;
+  background-color: #333;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  display: flex;
+}
+
+nav a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+nav a:hover {
+  background-color:red;
 }
 
 #pageContentDiv {
