--- a/app/static/admin.css
+++ b/app/static/admin.css
@@ -27,11 +27,11 @@ nav a:hover {
   background-color:red;
 }
 
-#pageContentDiv {
-  display: grid;
-  grid-template-columns: 50% 50%;
-}
 
-.adminOption {
-  height: 60%;
+
+.formBox{
+  width: 320px;
+  padding: 10px;
+  border: 5px solid gray;
+  margin: 0;
 }
