--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -11,19 +11,6 @@
     />
     <title>Cart</title>
   </head>
-  <style>
-    .show {
-        display: block !important;
-    }
-
-    .storeHours {
-      display: none;
-    }
-
-    .notStoreHours {
-      display: none;
-    }
-  </style>
   <body>
     <nav class="sticky">
       <a href="{% url 'home' %}" title="Home">Home</a>
@@ -48,22 +35,17 @@
       </div>
       <div class="storeHours">
         <h2 id="total">Total: ${{total}}</h2>
-        {% if isActive.isActive == False %}
+        {% if isActive.isActive == False and storeHours == True %}
         <div class="placeBtn"><a href="{% url 'checkout' %}">Place Order</a></div>
         {% else %}
         <p>Sorry, we are not taking online orders at this time.</p>
         {% endif %}
       </div>
-      <div class="notStoreHours">
-        <p>Sorry, we are not taking online orders at this time.</p>
-      </div>
     </div>
   </body>
   <script>
     var dt = new Date();
-
     function checkDateTime() {
-      console.log(dt.getDay())
       if (dt.getDay() != 5 && dt.getDay() != 6) {
         document.getElementById("myDropdown").insertAdjacentHTML(
           "beforeend",
@@ -72,15 +54,6 @@
           `
         );
       }
-      checkHours()
     }
-
-    function checkHours() {
-      if (dt.getHours() * 100 + dt.getMinutes() >= 1630 && dt.getHours() < 19) {
-        document.getElementById("storeHours").classList.toggle("show");
-      } else {
-        document.querySelector(".notStoreHours").classList.toggle("show");
-        }
-      }
   </script>
 </html>
