--- a/app/static/style.css
+++ b/app/static/style.css
@@ -86,52 +86,16 @@ textarea { overflow: auto; }
 }
 
 .small-col1 { 
-  border-radius: 15px 50px;
-  width: 226px; 
-  padding-right: 15px; 
-  box-shadow: 0 6px 8px 0 purple;
-  transition: 0.3s;
-  background-color: #000;
-  border: solid 2px purple; 
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(100px, auto);
-  justify-content: center;
-  align-content: center;
-  grid-auto-flow: column;
+  border-image: url(static/border-image.webp) 30 round;
 }
 
-.small-col2 { 
-  border-radius: 15px 50px;
-  width: 226px; 
-  padding-right: 15px; 
-  box-shadow: 0 6px 8px 0 purple;
-  transition: 0.3s;
-  background-color: #000;
-  border: solid 2px purple; 
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(100px, auto);
-  justify-content: center;
-  align-content: center;
-  grid-auto-flow: column;
+/* .small-col2 { 
+  
 }
 
 .small-col3 { 
-  border-radius: 15px 50px;
-  width: 226px; 
-  padding-right: 15px; 
-  box-shadow: 0 6px 8px 0 purple;
-  transition: 0.3s;
-  background-color: #000;
-  border: solid 2px purple; 
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(100px, auto);
-  justify-content: center;
-  align-content: center;
-  grid-auto-flow: column;
-}
+  
+} */
 
 
 
