--- a/app/static/admin.css
+++ b/app/static/admin.css
@@ -1,4 +1,6 @@
 body {
+  margin: 0;
+  padding: 0;
   font-size: 12px;
   line-height: 1.3;
   font-family: arial, sans-serif;
@@ -6,6 +8,7 @@ body {
   background-color: #000;
   min-width: 1023px;
 }
+
 nav {
   overflow: hidden;
   background-color: #333;
@@ -27,11 +30,17 @@ nav a:hover {
   background-color:red;
 }
 
-
+.main-content {
+  padding: 0;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+}
 
 .formBox{
-  width: 320px;
+  /* width: 320px; */
   padding: 10px;
   border: 5px solid gray;
   margin: 0;
+  font-size: 20px;
+  line-height: 50px;
 }
