--- a/app/static/admin.css
+++ b/app/static/admin.css
@@ -11,7 +11,7 @@ body {
 
 nav {
   overflow: hidden;
-  background-color: #333;
+  background-color: rgb(60, 56, 56);
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
