--- a/app/static/food-style.css
+++ b/app/static/food-style.css
@@ -31,8 +31,7 @@ a{
 /* Nav Bar */
 nav {
   overflow: hidden;
-  background-color: #333;
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(60, 56, 56);
   margin: 0;
   padding: 0;
 }
