--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="sticky">
       <a href="{% url 'home' %}" title="Home">Home</a>
-      <a class="Btn" name="all" href="{% url 'food' %}">X</a>
+      <a name="all" href="{% url 'food' %}">Menu</a>
       <a class="cartbtn" href="{% url 'cart' %}">Cart: {{cartNum}}</a>
     </nav>
     <div class="mainpage">
