--- a/app/static/admin.css
+++ b/app/static/admin.css
@@ -5,13 +5,13 @@ body {
   line-height: 1.3;
   font-family: arial, sans-serif;
   color: white;
-  background-color: #000;
+  background-color: #707070;
   min-width: 1023px;
 }
 
 nav {
   overflow: hidden;
-  background-color: rgb(60, 56, 56);
+  background-color: #1f1f1f;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
@@ -27,17 +27,16 @@ nav a {
 }
 
 nav a:hover {
-  background-color:red;
+  background-color:#991600;
 }
 
 .main-content {
   padding: 0;
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
+  display: flex;
 }
 
 .formBox{
-  /* width: 320px; */
+  width: 32vw;
   padding: 10px;
   border: 5px solid gray;
   margin: 0;
