--- a/app/static/food-style.css
+++ b/app/static/food-style.css
@@ -1,44 +1,35 @@
 /* Main styling */
 body {
   background-color:white;
-  color: black;
+  color: #1f1f1f;
   margin: 0;
   padding: 0;
 }
 
-a{
+a {
   text-decoration: none;
-  color: #000;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: 66% 34%;
+  color: black;
 }
 
 .show {
-  display: block !important;
-}
-
-.hide {
   display: none !important;
 }
 
 .foodimage {
-  height: 8vh;
+  height: 4vh;
 }
 
 /* Nav Bar */
 nav {
   overflow: hidden;
-  background-color: rgb(60, 56, 56);
+  background-color: #1a1a1d;
   margin: 0;
   padding: 0;
 }
 
 nav a {
   float: left;
-  font-size: 16px;
+  font-size: 4vh;
   color: white;
   text-align: center;
   padding: 14px 16px;
@@ -46,67 +37,16 @@ nav a {
 }
 
 nav a:hover {
-  background-color:red;
+  background-color: #991600;
 }
 
 .cartbtn {
   cursor: pointer;
-  font-size: 16px;
+  font-size: 4vh;
   margin: 0;
   float: right;
 }
 
-.dropbtn {
-  cursor: pointer;
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 26px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.checkoutbtn {
-  display: none;
-}
-
-.sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-}
-
-.sidesError {
-  display: none;
-}
-
-.afterHoursError {
-  display: none;
-}
 /* Menu Display */
 .full-width {
   width: 100%;
@@ -120,20 +60,13 @@ nav a:hover {
   z-index: 10;
 }
 
-#itemBox {
+.itemBox {
   background-color: white;
   margin: 2em;
   padding: 3em;
-  border: solid 2px red;
+  border: solid 4px #991600;
   text-align: center;
-}
-
-#content{
-  display: grid;
-  column-gap: 50px;
-  grid-template-columns: auto auto auto;
-  background-color: white;
-  padding: 10px;
+  border-radius: 15px 50px 30px;
 }
 
 .itemName {
@@ -146,28 +79,23 @@ img {
   object-fit: scale down;
 }
 
-/* Cart Display */
-#total {
-  display: none;
+.gridBox {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  background-color: #4E4E50;
 }
 
-.ticket-content {
-  z-index: 1;
-  float: left;
+.Btn {
+  font-size: 11vh;
+  color: rgb(73, 4, 4);
+  text-align: center;
 }
 
-.sticky2 {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+.Btn:hover {
+  border-bottom: 12px solid #4E4E50;
 }
 
-.ticketSide {
-  background-color: yellow;
-  display: none;
-}
-
-/* Checkout Display */
-#checkoutBox {
-  display: none;
+.mainpage {
+  display: grid;
+  grid-template-columns: 100%;
 }
