--- a/app/templates/till.html
+++ b/app/templates/till.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="{% static 'food-style.css' %}"/>
+    <link rel="stylesheet" href="{% static 'admin.css' %}"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
   </head>
@@ -17,17 +17,15 @@
         <a href="{% url 'home' %}" title="Home">Home</a>
         <a href="{% url 'admin' %}">Admin Page</a>
         <a href="{% url 'tillView' %}">View Tills</a>
-  
-        <h1>Welcome Susan</h1>
       </nav>
-      <div id="content">
-        {% for till in tills%}
-          <div id="itemBox" class="{{item.type}}">
-            <h2 class="itemName">{{till.date}}</h2>
-            <h2 class="itemPrice">$ {{till.amount}}</h2>
-          </div>
-        {% endfor %}
-      </div>
+      {% for till in tills%}
+        <div class="formBox">
+            <div id="itemBox" class="{{item.type}}">
+              <h2 class="itemName">{{till.date}}</h2>
+              <h2 class="itemPrice">$ {{till.amount}}</h2>
+            </div>
+        </div>
+      {% endfor %}
 
     </body>
 </html>
