--- a/app/static/admin.css
+++ b/app/static/admin.css
@@ -43,3 +43,20 @@ nav a:hover {
   font-size: 20px;
   line-height: 50px;
 }
+
+.ordersButton {
+  justify-content: center;
+}
+
+.ordersButton a {
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+}
+
+.NOB {
+  width: 164px; 
+  height: 50px; 
+  border: 3px solid black;
+  justify-content: center;
+}
