--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -18,11 +18,6 @@
       <a href="{% url 'deleteEvent' %}">Delete Events</a>
       <a href="{% url 'tillView' %}">View Tills</a>
       <a href="{% url 'orderAdmin' %}">Orders</a>
-      {% if noOrdersButton.isActive == True %}
-        <a href="{% url 'turnOffOrders' %}" style="background-color: red; width: 164px; border: 3px solid black;">Not Taking Orders</a>
-      {% else %}
-      <a href="{% url 'turnOffOrders' %}" style="background-color: green; width: 164px; border: 3px solid black;">Taking Orders</a>
-      {%endif%}
     </nav>
     <div class="main-content">
       <div class="formBox" id="dailyLunchForm">
@@ -46,6 +41,14 @@
           <input type="submit" name="form_type" value="Till Out" style="height: 40px; width: 80px; font-size: 17px;"/>
         </form>
       </div>
+    </div>
+    <div class="ordersButton" style="height: 40vh;">
+      {% if noOrdersButton.isActive == True %}
+      <a href="{% url 'turnOffOrders' %}">
+        <div class="NOB" style="background-color: red;">Not Taking Orders</div></a>
+      {% else %}
+      <a href="{% url 'turnOffOrders' %}"><div class="NOB" style="background-color: green;">Taking Orders</div></a>
+      {%endif%}
     </div>
   </body>
 </html>
