--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,181 +1,78 @@
-{%load static%}
-<!DOCTYPE html>
-<html>
+{% load static %}
+<!doctype html>
+<html lang="en">
   <head>
-    <title>Register</title>
-	<link rel="stylesheet" href="{% static 'style.css' %}"/>
+  	<title>Signup Page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <style>
-		
-		body,
-		html {
-			margin: 0;
-			padding: 0;
-		}
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 
-		.user_card {
-			background-image: url(images/signup-pic.jpeg);
-			width: 30em;
-			height:30em;
-			margin-top: 5em;
-			margin-bottom: none;
-			margin-left: 7em;
-			text-align: center;
-			display: flex;
-			justify-content: left;
-			flex-direction: column;
-			border: 2px solid white; 
-			padding: 20px;
-			padding-right: 30em;
-			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			border-radius: 25px;
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	
+	<link rel="stylesheet" href="{% static 'login-style.css' %}">
 
-		}
-		.tb{
-			margin-left: 17em;
-			height: .5em;
-			
-		}
-		.form_container {
-			margin-top: 20px;
-		}
+	</head>
+	<body>
 
-		.form-title{
-			color: white;
-			text-align: right;
-			font-size: ;
-		}
-		.login_btn {
-			width: 25em;
-			height: 2em;
-			background: black ;
-			border: None;
-			color: white ;
-			margin-left: 18em;
-			border-radius: 25px;
-		}
-		.login_btn:hover{
-			background: lightblue;
-			color: black;
-		}
-		.login_btn:focus {
-			box-shadow: none ;
-			outline: 1px ;
-		}
-		.form-title {
-        text-align: left;
-		font-size: 30px;
-		font-style: Apple Chancery, cursive;
-      }
-		.login_container {
-			padding-top: .8em;
-			width:em;
-		}
-		.input-group-text {
-			font-size: 15px;
-			background: #f7ba5b ;
-			color: darkgray ;
-			border: 0 ;
-			border-radius: 0.25rem 0 0 0.25rem ;
-		}
-
-		.mk{
-			color: darkgray;
-			text-decoration: None;
-			{% comment %} margin-left: 20em; {% endcomment %}
-		}
-		.mk:hover {
-			color: lightblue;
-		}
-		.input_user,
-		.input_pass:focus {
-			box-shadow: none ;
-			outline: 0px ;
-		}
-		.uname{
-			margin-left: 20em;
-		}
-
-	</style>
-  </head>
-  <body>
-	<div class = "register">
-		
-		<div class="d-flex justify-content-center form_container">
-		  <form method="POST" action="">
-			{% csrf_token %}
-			<div class="box1">
-				<div class="input-group mb-3">
-				<h3 class="form-title">REGISTER USER</h3>
-				<div class="input-group-append">
-					<span class="input-group-text">
-					<i class="fas fa-user">
-				<div class="user_card">	
-									
-				<label>
-					<p class="tb">Username:</p>
-					<p class="uname"> {{form.username}}<p>
-				</label>
-				<div class="input-group mb-3">
-				
-				<div class="input-group-append">
-					<span class="input-group-text"
-					><i class="fas fa-user"></i
-					></span>
-				</div>
-				</div>
-				
-				<div class="input-group mb-2">
-					<div class="input-group-append">
-					<span class="input-group-text"
-						><i class="fas fa-envelope-square"></i
-					></span>
-					</div>
-					<label>
-						<p class="tb">Email Address:</p>
-						<p class="uname"> {{form.email}}</p>
-					</label>
-				</div>
-				<div class="input-group mb-2">
-					<div class="input-group-append">
-					<span class="input-group-text"
-						><i class="fas fa-key"></i
-					></span>
-					</div>
-					<label>
-						<p class="tb">Password:</p>
-						<p class="uname">{{form.password1}}</p>
-					</label>
-				</div>	
-				<div class="input-group mb-2">
-					<div class="input-group-append">
-					<span class="input-group-text"
-						><i class="fas fa-key"></i
-					></span>
-					</div>
-					<label>
-						<p class="tb">Password Confirmation:</p>
-						<p class="uname"> {{form.password2}}<p>
-					</label>
-				</div>		
-				<div class=" mt-3 login_container">
-					<input
-					class=" login_btn"
-					type="submit"
-					value="Create User"
-					/>
-				</div>
-				</form>
-					<div>
-					{{form.errors}}
-					</div>
-							<a class="mk" href="{% url 'login' %}">Already have an account?</a>
-					
+	<section class="ftco-section">
+		<div class="container">
+			<form method="POST" action="" class="signin-form">
+				{% csrf_token %}
+			<div class="row justify-content-center">
+				<div class="col-md-6 text-center mb-5">
+					<h2 class="heading-section"></h2>
 				</div>
 			</div>
-		</div>		
-	
-</body>
-</html>
+			<div class="row justify-content-center">
+				<div class="col-md-12 col-lg-10">
+					<div class="wrap d-md-flex">
+						<div class="text-wrap p-4 p-lg-5 text-center d-flex align-items-center order-md-last">
+							<div class="text w-100">
+								<h2>Welcome to Signup</h2>
+								<p>Already have an account?</p>
+								<a href="{% url 'login' %}" class="btn btn-white btn-outline-white">Log In</a>
+							</div>
+			      </div>
+						<div class="login-wrap p-4 p-lg-5">
+			      	<div class="d-flex">
+			      		<div class="w-100">
+			      			<h3 class="mb-4">Sign Up</h3>
+			      		</div>
+			      	</div>
+			      		<div class="form-group mb-3">
+			      			<label class="label" for="name">Username</label>
+			      			<input type="text" class="form-control" placeholder="Username"  required>
+			      		</div>
+						  <div class="form-group mb-3">
+							<label class="label" for="password">Email</label>
+						  <input type="text" class="form-control" placeholder="Email" required>
+						</div>
+		            <div class="form-group mb-3">
+		            	<label class="label" for="password">Password</label>
+		              <input type="password" class="form-control" placeholder="Password" required>
+		            </div>
+					<div class="form-group mb-3">
+		            	<label class="label" for="password">Confirm Password</label>
+		              <input type="password" class="form-control" placeholder="Password2" required>
+		            </div>
+		            <div class="form-group">
+		            	<button type="submit" class="form-control btn btn-primary submit px-3">Create Account</button>
+		            </div>
+		            <div class="form-group d-md-flex">
+		            </div>
+		          </form>
+		        </div>
+		      </div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<script src="js/jquery.min.js"></script>
+  <script src="js/popper.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
+
+	</body>
+</html> 
